--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-code-editor",
+  "name": "nimbus",
   "version": "1.0.0",
   "description": "",
   "main": "window.js",
@@ -9,9 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bin": {
-    "installer": "index.html"
-  },
   "dependencies": {
     "@electron/remote": "^2.0.9",
     "adm-zip": "^0.5.10",
